# wsl-snapaste

./: .gitignore  LICENSE  README.md  app.py  build.bat  clipboard.py  main.py  pyproject.toml  start.vbs
.github/workflows/: build.yml  release.yml
tests/: copy_image.py  test_all3.py
