[project]
name = "wsl-snapaste"
version = "0.1.0"
description = "Windows screenshot to WSL path bridge for AI terminal tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.2.0",
    "pywin32>=312",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
