[project]
name = "wsl-snapaste"
version = "1.0.1"
description = "Paste Windows screenshots directly into WSL terminal"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.2.0",
    "pywin32>=312",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pyinstaller]
paths = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
